cmake_minimum_required(VERSION 3.16)
project(VDT_Engine)

set(CMAKE_CXX_STANDARD 23)
# Executabilul in bin/ - uneori Windows nu blocheaza cai noi
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# RayLib instalat local
set(RAYLIB_DIR "C:/raylib/raylib/src")
include_directories(${RAYLIB_DIR})
link_directories(${RAYLIB_DIR})

include_directories(AST/Condition)
include_directories(AST/DeleteStatement)
include_directories(AST/InsertStatement)
include_directories(frontend/Lexer)
include_directories(AST/SelectStatement)
include_directories(AST/Statement)

add_executable(VDT_Engine
        AST/Condition/Condition.hpp
        AST/DeleteStatement/DeleteStatement.cpp
        AST/DeleteStatement/DeleteStatement.hpp
        AST/InsertStatement/InsertStatement.cpp
        AST/InsertStatement/InsertStatement.hpp
        frontend/Lexer/Lexer.cpp
        frontend/Lexer/Lexer.hpp
        AST/SelectStatement/SelectStatement.cpp
        AST/SelectStatement/SelectStatement.hpp
        AST/Statement/Statement.hpp
        main.cpp
        frontend/Parser/Parser.cpp
        frontend/Parser/Parser.hpp
        Storage/Page/Page.cpp
        Storage/Page/Page.hpp
        Storage/PageHeader/PageHeader.hpp
        Storage/PageManager/PageManager.cpp
        Storage/PageManager/PageManager.hpp
        Frontend/Lexer/Token.hpp
        Frontend/Lexer/TokenType.hpp
        AST/CreateStatement/CreateStatement.cpp
        AST/CreateStatement/CreateStatement.hpp
        AST/Columns/Columns.hpp
        Catalog/Catalog.cpp
        Catalog/Catalog.hpp
        Table/Table.cpp
        Table/Table.hpp
        AST/Row/Row.hpp
        StringUtils/StringUtils.hpp
        Engine/Engine.cpp
        Engine/Engine.hpp
        Indexing/IndexRecord/IndexRecord.hpp
        Indexing/BPlusNode/BPlusNode.hpp
        Indexing/BPlusTree/BPlusTree.cpp
        Indexing/BPlusTree/BPlusTree.hpp
        Storage/LRUCache/LRUCache.hpp
        Storage/LRUCache/LRUCache.cpp
        WALManager/WALManager.hpp
        WALManager/WALManager.cpp
        GUI/GUI.hpp
        GUI/GUI.cpp
        AST/DropStatement/DropStatement.cpp
        AST/DropStatement/DropStatement.hpp
        AST/UpdateStatement/UpdateStatement.cpp
        AST/UpdateStatement/UpdateStatement.hpp
        main.cpp
        AST/DropStatement/DropStatement.cpp
        GUI/Colors.hpp
)

# Legare statică a runtime C++/GCC - .exe nu mai are nevoie de libstdc++-6.dll / libgcc_s
target_link_options(VDT_Engine PRIVATE -static-libgcc -static-libstdc++)
target_link_libraries(VDT_Engine PRIVATE raylib opengl32 gdi32 winmm)
